--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error blanditiis porro perferendis, voluptatem consequatur alias dignissimos reiciendis possimus sed laborum? Corporis rem porro dicta nam, doloribus accusantium placeat atque excepturi!</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis quam accusantium sapiente facilis vel nobis quod! Veritatis ad iure placeat. Corporis earum ducimus repellendus eum assumenda nulla, tempore voluptas amet.</p>
         </article>
     </main>
 </body>
