--- a/index.html
+++ b/index.html
@@ -10,14 +10,19 @@
     <main>
         <header>
             <h1>Cursos Grátis</h1>
+            <img src="imagens/curso-em-video-cor.png" alt="Curso em Vídeo">
         </header>
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
+            <img class="lado" src="imagens/curso-html-css.png" alt="Curso HTML">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error blanditiis porro perferendis, voluptatem consequatur alias dignissimos reiciendis possimus sed laborum? Corporis rem porro dicta nam, doloribus accusantium placeat atque excepturi!</p>
+            <p><a href="curso-html.html">Acesse o Curso de HTML5</a></p>
         </article>
         <article>
             <h2>Curso de JavaScript</h2>
+            <img class="lado" src="imagens/curso-javascript.png" alt="Curso JavaScript">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis quam accusantium sapiente facilis vel nobis quod! Veritatis ad iure placeat. Corporis earum ducimus repellendus eum assumenda nulla, tempore voluptas amet.</p>
+            <p><a href="curso-js.html">Acesso o curso de JavaScript</a></p>
         </article>
     </main>
 </body>
